--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,28 @@
+{% extends 'blog/base.html' %}
+{% load staticfiles %}
+
 <html>
     <head>
         <title>Aprendendo Django</title>
+        <!--Aponta arquivos do Bootstrap na internet-->
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <!--Adiciona arquivos estáticos-->
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <!--Adiciona fontes do Bootstrap-->
+        <link href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <div>
-            <h1><a href="">Apresentando dados:</a></h1>
-        </div>
-        <div>
+        {% block content %}
             {% for post in posts %}
-                <div>
-                    <p>published: {{ post.published_date }}</p>
-                    <h1><a href="">{{ post.title }}</a></h1>
+                <div class="post">
+                    <div class="date">
+                        {{ post.published_date }}
+                    </div>
+                    <h1><a href="{% url 'blog.views.post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
                     <p>{{ post.text|linebreaksbr }}</p>
                 </div>
             {% endfor %}
-            <!--https://tutorial.djangogirls.org/pt/django_templates/-->
-        </div>
+        {% endblock content %}
     </body>
 </html>
